--- a/Complex/complex.html
+++ b/Complex/complex.html
@@ -5,6 +5,18 @@
     </title>
     <body>
         <h2>GARAGE</h2>
-        
+        <div id='q1'></div>
+        <div id='q2'></div>
+        <input type="button" id='btn1' value="Mechanical Parts"></input>
+        <input type="button" id='btn2' value="Electrical Parts"></input>
+        <input type="button" id='btn3' value="Lubes"></input>
+        <input type="button" id='btn4' value="Other Accessories"></input><br>
+        <div id='q3'></div>
+        <div id='q4'></div>
+        <div id='q5'></div>
+        <div id='q6'></div>
+        <div id='q7'></div> 
+        <div id='q8'></div>
+        <script src="Complex.js"></script>
     </body>
 </html>
