--- a/Complex/complex.html
+++ b/Complex/complex.html
@@ -5,6 +5,7 @@
     </title>
     <body>
         <h2>GARAGE</h2>
+        <div id='tit'></div>
         <div id='q1'></div>
         <div id='q2'></div>
         <input type="button" id='btn1' value="Mechanical Parts"></input>
@@ -17,6 +18,9 @@
         <div id='q6'></div>
         <div id='q7'></div> 
         <div id='q8'></div>
+        <div id='offer'></div>
+        <div id='brake'></div>
+        <div id='show'></div>
         <script src="Complex.js"></script>
     </body>
 </html>
