--- a/Complex/complex.html
+++ b/Complex/complex.html
@@ -5,13 +5,13 @@
     </title>
     <body>
         <h2>GARAGE</h2>
-        <div id='tit'></div>
+        <div id='titl'></div>
         <div id='q1'></div>
         <div id='q2'></div>
-        <input type="button" id='btn1' value="Mechanical Parts"></input>
-        <input type="button" id='btn2' value="Electrical Parts"></input>
-        <input type="button" id='btn3' value="Lubes"></input>
-        <input type="button" id='btn4' value="Other Accessories"></input><br>
+        <input type="button" id='btn1' value="Mechanical Parts" onclick="mech()"></input>
+        <input type="button" id='btn2' value="Electrical Parts" onclick="EEE()"></input>
+        <input type="button" id='btn3' value="Lubes" onclick="chemical()"></input>
+        <input type="button" id='btn4' value="Other Accessories" onclick="accs();"></input><br>
         <div id='q3'></div>
         <div id='q4'></div>
         <div id='q5'></div>
@@ -19,8 +19,11 @@
         <div id='q7'></div> 
         <div id='q8'></div>
         <div id='offer'></div>
-        <div id='brake'></div>
+        <div id='brake' ></div>
         <div id='show'></div>
+        <div id='avail'></div>
+        <div id='brand'></div>
+        <div id='benefits' ></div>
         <script src="Complex.js"></script>
-    </body>
+           </body>
 </html>
