--- a/Complex/complex.html
+++ b/Complex/complex.html
@@ -3,9 +3,11 @@
     <title>
         Complex...Garage!
     </title>
+    <link rel="stylesheet" href="complex.css"/>
     <body>
         <h2>GARAGE</h2>
         <div id='titl'></div>
+        <p>PURPOSE :</p>
         <div id='q1'></div>
         <div id='q2'></div>
         <input type="button" id='btn1' value="Mechanical Parts" onclick="mech()"></input>
@@ -16,13 +18,13 @@
         <div id='q4'></div>
         <div id='q5'></div>
         <div id='q6'></div>
-        <div id='q7'></div> 
-        <div id='q8'></div>
         <div id='offer'></div>
         <div id='brake' ></div>
         <div id='show'></div>
         <div id='avail'></div>
         <div id='brand'></div>
+        <div id='q7'></div> 
+        <div id='q8'></div>
         <div id='benefits' ></div>
         <script src="Complex.js"></script>
            </body>
