--- a/Complex/complex.html
+++ b/Complex/complex.html
@@ -26,6 +26,7 @@
         <div id='q7'></div> 
         <div id='q8'></div>
         <div id='benefits' ></div>
+        <div id='demo'></div>
         <script src="Complex.js"></script>
            </body>
 </html>
