--- a/Complex/complex.html
+++ b/Complex/complex.html
@@ -7,13 +7,11 @@
     <body>
         <h2>GARAGE</h2>
         <div id='titl'></div>
-        <p>PURPOSE :</p>
+        <div id='bb'>
+        <p>PURPOSE </p>
         <div id='q1'></div>
         <div id='q2'></div>
-        <input type="button" id='btn1' value="Mechanical Parts" onclick="mech()"></input>
-        <input type="button" id='btn2' value="Electrical Parts" onclick="EEE()"></input>
-        <input type="button" id='btn3' value="Lubes" onclick="chemical()"></input>
-        <input type="button" id='btn4' value="Other Accessories" onclick="accs();"></input><br>
+      
         <div id='q3'></div>
         <div id='q4'></div>
         <div id='q5'></div>
@@ -27,6 +25,7 @@
         <div id='q8'></div>
         <div id='benefits' ></div>
         <div id='demo'></div>
+    </div>
         <script src="Complex.js"></script>
            </body>
 </html>
